tests/snapshots/files__if_print_dont_specialize-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 10 20
@main(v0: int, v1: int) {
.b2_:
  v3_: bool = eq v0 v1;
  br v3_ .b4_ .b5_;
.b4_:
  v6_: int = mul v0 v1;
  v7_: int = id v6_;
  print v7_;
  ret;
  jmp .b8_;
.b5_:
  v9_: int = mul v0 v1;
  v7_: int = id v9_;
  print v7_;
  ret;
.b8_:
}
