tests/snapshots/files__if_true-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
.b1_:
  c2_: int = const 1;
  v3_: int = sub v0 c2_;
  print v0;
  print v3_;
  ret;
}
