tests/snapshots/files__implicit-return-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@pow(v0: int, v1: int) {
  c2_: int = const 0;
  c3_: int = const 1;
  v4_: int = sub v1 c3_;
  v5_: bool = lt c2_ v4_;
  v6_: int = id v0;
  v7_: int = id c2_;
  v8_: int = id v0;
  v9_: int = id v1;
  br v5_ .b10_ .b11_;
.b10_:
  v12_: int = id v0;
  v13_: int = id c2_;
  v14_: int = id v0;
  v15_: int = id v1;
.b16_:
  v17_: int = mul v12_ v14_;
  c18_: int = const 1;
  v19_: int = add c18_ v13_;
  v20_: int = sub v15_ c18_;
  v21_: bool = lt v19_ v20_;
  v12_: int = id v17_;
  v13_: int = id v19_;
  v22_: int = id v14_;
  v23_: int = id v15_;
  v14_: int = id v22_;
  v15_: int = id v23_;
  br v21_ .b16_ .b24_;
.b24_:
  v6_: int = id v12_;
  v7_: int = id v13_;
  v8_: int = id v14_;
  v9_: int = id v15_;
  print v6_;
  ret;
  jmp .b25_;
.b11_:
  print v6_;
  ret;
.b25_:
}
@main {
  c0_: int = const 4;
  c1_: int = const 0;
  c2_: int = const 15;
  v3_: int = id c0_;
  v4_: int = id c1_;
  v5_: int = id c0_;
  v6_: int = id c2_;
.b7_:
  v8_: int = mul v3_ v5_;
  c9_: int = const 1;
  v10_: int = add c9_ v4_;
  v11_: int = sub v6_ c9_;
  v12_: bool = lt v10_ v11_;
  v3_: int = id v8_;
  v4_: int = id v10_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v5_: int = id v13_;
  v6_: int = id v14_;
  br v12_ .b7_ .b15_;
.b15_:
  print v3_;
  ret;
}
