tests/snapshots/files__implicit-return-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="int"];
v1 [label="int"];
v2 [label="arg 0"];
v3 [label="pow"];
v3 -> v0;
v3 -> v1;
v3 -> v2;
}
subgraph {
node [ordering=out];
v0 [label="Θ_13"];
v1 [label="Θ_13"];
v2 [label="Θ_13"];
v3 [label="Θ_13"];
v4 [label="Θ_13"];
v5 [label="pass_13"];
v6 [label="no-op"];
v7 [label="no-op"];
v8 [label="no-op"];
v9 [label="no-op"];
v10 [label="no-op"];
v11 [label="arg 2"];
v12 [label="int"];
v13 [label="sub"];
v14 [label="lt"];
v15 [label="mul"];
v16 [label="int"];
v17 [label="int"];
v18 [label="int"];
v19 [label="add"];
v20 [label="Φ"];
v21 [label="Φ"];
v22 [label="Φ"];
v23 [label="Φ"];
v24 [label="Φ"];
v25 [label="Φ"];
v26 [label="arg 0"];
v27 [label="int"];
v28 [label="arg 0"];
v29 [label="arg 1"];
v30 [label="eval_13"];
v31 [label="eval_13"];
v32 [label="eval_13"];
v33 [label="eval_13"];
v34 [label="eval_13"];
v35 [label="int"];
v36 [label="sub"];
v37 [label="lt"];
v38 [label="mul"];
v39 [label="int"];
v40 [label="int"];
v41 [label="int"];
v42 [label="add"];
v43 [label="Φ"];
v44 [label="Φ"];
v45 [label="Φ"];
v46 [label="Φ"];
v47 [label="Φ"];
v48 [label="Φ"];
v49 [label="int"];
v50 [label="sub"];
v51 [label="lt"];
v52 [label="mul"];
v53 [label="int"];
v54 [label="int"];
v55 [label="int"];
v56 [label="add"];
v57 [label="Φ"];
v58 [label="Φ"];
v59 [label="Φ"];
v60 [label="Φ"];
v61 [label="Φ"];
v62 [label="Φ"];
v63 [label="int"];
v64 [label="sub"];
v65 [label="lt"];
v66 [label="mul"];
v67 [label="int"];
v68 [label="int"];
v69 [label="int"];
v70 [label="add"];
v71 [label="Φ"];
v72 [label="Φ"];
v73 [label="Φ"];
v74 [label="Φ"];
v75 [label="Φ"];
v76 [label="Φ"];
v77 [label="int"];
v78 [label="sub"];
v79 [label="lt"];
v80 [label="mul"];
v81 [label="int"];
v82 [label="int"];
v83 [label="int"];
v84 [label="add"];
v85 [label="Φ"];
v86 [label="Φ"];
v87 [label="Φ"];
v88 [label="Φ"];
v89 [label="Φ"];
v90 [label="Φ"];
v91 [label="int"];
v92 [label="sub"];
v93 [label="lt"];
v94 [label="mul"];
v95 [label="int"];
v96 [label="int"];
v97 [label="int"];
v98 [label="add"];
v99 [label="Φ"];
v100 [label="Φ"];
v101 [label="Φ"];
v102 [label="Φ"];
v103 [label="Φ"];
v104 [label="Φ"];
v105 [label="PRINT"];
v0 -> v11;
v0 -> v20;
v1 -> v26;
v1 -> v21;
v2 -> v27;
v2 -> v23;
v3 -> v28;
v3 -> v24;
v4 -> v29;
v4 -> v25;
v5 -> v22;
v6 -> v43;
v7 -> v58;
v8 -> v74;
v9 -> v89;
v10 -> v104;
v13 -> v4;
v13 -> v12;
v14 -> v2;
v14 -> v13;
v15 -> v1;
v15 -> v3;
v19 -> v2;
v19 -> v18;
v20 -> v14;
v20 -> v0;
v20 -> v0;
v21 -> v14;
v21 -> v15;
v21 -> v1;
v22 -> v14;
v22 -> v16;
v22 -> v17;
v23 -> v14;
v23 -> v19;
v23 -> v2;
v24 -> v14;
v24 -> v3;
v24 -> v3;
v25 -> v14;
v25 -> v4;
v25 -> v4;
v30 -> v0;
v30 -> v5;
v31 -> v1;
v31 -> v5;
v32 -> v2;
v32 -> v5;
v33 -> v3;
v33 -> v5;
v34 -> v4;
v34 -> v5;
v36 -> v34;
v36 -> v35;
v37 -> v32;
v37 -> v36;
v38 -> v31;
v38 -> v33;
v42 -> v32;
v42 -> v41;
v43 -> v37;
v43 -> v30;
v43 -> v30;
v44 -> v37;
v44 -> v38;
v44 -> v31;
v45 -> v37;
v45 -> v39;
v45 -> v40;
v46 -> v37;
v46 -> v42;
v46 -> v32;
v47 -> v37;
v47 -> v33;
v47 -> v33;
v48 -> v37;
v48 -> v34;
v48 -> v34;
v50 -> v34;
v50 -> v49;
v51 -> v32;
v51 -> v50;
v52 -> v31;
v52 -> v33;
v56 -> v32;
v56 -> v55;
v57 -> v51;
v57 -> v30;
v57 -> v30;
v58 -> v51;
v58 -> v52;
v58 -> v31;
v59 -> v51;
v59 -> v53;
v59 -> v54;
v60 -> v51;
v60 -> v56;
v60 -> v32;
v61 -> v51;
v61 -> v33;
v61 -> v33;
v62 -> v51;
v62 -> v34;
v62 -> v34;
v64 -> v34;
v64 -> v63;
v65 -> v32;
v65 -> v64;
v66 -> v31;
v66 -> v33;
v70 -> v32;
v70 -> v69;
v71 -> v65;
v71 -> v30;
v71 -> v30;
v72 -> v65;
v72 -> v66;
v72 -> v31;
v73 -> v65;
v73 -> v67;
v73 -> v68;
v74 -> v65;
v74 -> v70;
v74 -> v32;
v75 -> v65;
v75 -> v33;
v75 -> v33;
v76 -> v65;
v76 -> v34;
v76 -> v34;
v78 -> v34;
v78 -> v77;
v79 -> v32;
v79 -> v78;
v80 -> v31;
v80 -> v33;
v84 -> v32;
v84 -> v83;
v85 -> v79;
v85 -> v30;
v85 -> v30;
v86 -> v79;
v86 -> v80;
v86 -> v31;
v87 -> v79;
v87 -> v81;
v87 -> v82;
v88 -> v79;
v88 -> v84;
v88 -> v32;
v89 -> v79;
v89 -> v33;
v89 -> v33;
v90 -> v79;
v90 -> v34;
v90 -> v34;
v92 -> v34;
v92 -> v91;
v93 -> v32;
v93 -> v92;
v94 -> v31;
v94 -> v33;
v98 -> v32;
v98 -> v97;
v99 -> v93;
v99 -> v30;
v99 -> v30;
v100 -> v93;
v100 -> v94;
v100 -> v31;
v101 -> v93;
v101 -> v95;
v101 -> v96;
v102 -> v93;
v102 -> v98;
v102 -> v32;
v103 -> v93;
v103 -> v33;
v103 -> v33;
v104 -> v93;
v104 -> v34;
v104 -> v34;
v105 -> v7;
v105 -> v6;
}
}

