tests/snapshots/files__implicit-return_structured.snap
---
source: tests/files.rs
expression: "format!(\"{}\", structured)"
---
main {
block:

 break 1
block:
 v0.0: float = const 3.2;
 x.0: float = id v0.0;
 v1.0: int = const 2;
 n.0: int = id v1.0;
 v2.0: float = id x.0;
 v3.0: int = id n.0;
 call @pow v2.0 v3.0;
 v4.0: int = const 0;
 return

}
