tests/snapshots/files__impossible_if-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 1;
  c2_: int = const 2;
  v3_: bool = lt v0 c2_;
  br v3_ .b4_ .b5_;
.b4_:
  v6_: bool = lt v0 c2_;
  br v6_ .b7_ .b8_;
.b7_:
  print c1_;
  v9_: int = id c1_;
  v10_: int = id v9_;
  print c1_;
  ret;
  jmp .b11_;
.b8_:
  print c2_;
  v9_: int = id c1_;
  v10_: int = id v9_;
  print c1_;
  ret;
  jmp .b11_;
.b5_:
  print c1_;
  v10_: int = id c1_;
  print c1_;
  ret;
.b11_:
}
